; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_envelope-detector.c_envelope_detector_comp_isr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_envelope-detector.c_envelope_detector_comp_isr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.envelope = type { i32, i32, i32 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @envelope_detector_comp_isr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @envelope_detector_comp_isr(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.envelope*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.envelope*
  store %struct.envelope* %7, %struct.envelope** %5, align 8
  %8 = load %struct.envelope*, %struct.envelope** %5, align 8
  %9 = getelementptr inbounds %struct.envelope, %struct.envelope* %8, i32 0, i32 1
  %10 = call i32 @spin_lock(i32* %9)
  %11 = load %struct.envelope*, %struct.envelope** %5, align 8
  %12 = getelementptr inbounds %struct.envelope, %struct.envelope* %11, i32 0, i32 0
  store i32 1, i32* %12, align 4
  %13 = load %struct.envelope*, %struct.envelope** %5, align 8
  %14 = getelementptr inbounds %struct.envelope, %struct.envelope* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @disable_irq_nosync(i32 %15)
  %17 = load %struct.envelope*, %struct.envelope** %5, align 8
  %18 = getelementptr inbounds %struct.envelope, %struct.envelope* %17, i32 0, i32 1
  %19 = call i32 @spin_unlock(i32* %18)
  %20 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %20
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @disable_irq_nosync(i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
